# PyScriptWidgets

./: .pylintrc  LICENSE.txt  README.md  extra.py  index.html  kitchensink.py  main.py  pyproject.toml  pyscript.json  pyscript.toml  readme.txt  requirements.txt  test.py  todo.py  widgets - kopie.py  widgets.css  widgets.py
incubator/menu/: index.html
incubator/split/: index.css  index.html
incubator/splitpane/: index.html  index.js
incubator/table/: index.html
incubator/tabpane/: index.html
incubator/tree/: index.css  index.html
widgets/: __init__.py  base.py  button.py  compound.py  focussable.py  globals.py  grid.py  input.py  label.py  panel.py  tab.py  text.py  widgets.css  widgets.js
