# Copyright (c) 2024 Michiel Westland
# This software is distributed under the terms of the MIT license. See LICENSE.txt
#
# Python project configuration file
# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "PyScriptWidgets"
description = "A client side GUI class (widget) library for building web applications with PyScript."
license = {
    text = "MIT"
}
requires-python = ">=3.11"
authors = [
    { name = "Michiel Westland", email = "michielwestland@gmail.com" },
]

[tool.black]
# See: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
line-length = 100
target-version = ['py311']
